<resources>
    <string name="app_name">NewBabyBorn</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cnfrmpassword">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_account">Login To Your Account</string>
    <string name="login">Login</string>
    <string name="donothaveaccount">Don\'t Have An Account</string>
    <string name="upload">Uploaded Item</string>
    <string name="image">Image</string>
    <string name="dollar">$20</string>
    <string name="price">Price</string>
    <string name="itemName">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="count">20</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="full_address">Naster College Altaaf Colony Lahore</string>
    <string name="pinlocation">Pin Location</string>
    <string name="addBtn">Add Item</string>
    <string name="TitleFieldmustnotempty">Enter Full Name</string>
    <string name="emailisnotempty">Email is not empty</string>
    <string name="emailaddressnotvalid">Email Address not valid</string>
    <string name="passwordisnotempty">Password is not Empty</string>
    <string name="cnfrmpasswordpasswordisnotempty">Confirm Password is not empty</string>
    <string name="passwordnotmatch">Password Does not match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>


    <string-array name="user_gender_array">
        <item>Select Item Type</item>
        <item>Feeding</item>
        <item>Cloth</item>
        <item>Hygiene</item>
    </string-array>
</resources>