<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.activity.SignUpActivity">

    <include
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:id="@+id/signupActivity"
        android:layout_height="90dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_below="@+id/signupActivity"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="70dp"
                android:layout_weight="0.3"
                android:gravity="center|top">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="90dp"
                    android:layout_gravity=""
                    android:src="@drawable/splashscreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/create_your_account"
                    android:textColor="@color/textAndAddColor"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/full_name"
                    android:textColor="@color/textAndAddColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/et_shape"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textColor="@color/textAndAddColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/et_shape"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/password"
                    android:textColor="@color/textAndAddColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/et_shape"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cnfrmpassword"
                    android:textColor="@color/textAndAddColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/et_shape"
                    android:inputType="textPassword" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/btn_shape"
                    android:text="@string/sign_up"
                    android:id="@+id/signUpbtn"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>




    <ProgressBar
        android:layout_width="match_parent"
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"/>


</RelativeLayout>